# ros_poppy

./: README.md
poppy_gazebo/: CMakeLists.txt  README.md  package.xml
poppy_gazebo/config/: poppy_flat_feet_control.yaml
poppy_gazebo/launch/: poppy_flat_feet_control.launch  poppy_flat_feet_gazebo.launch
poppy_gazebo/meshes/: FR07_left.STL  FR07_right.STL  Spine.STL  abdomen.STL  ankle_left.STL  ankle_right.STL  base_link.STL  chest.STL  connector_left.STL  connector_right.STL  double_rot.STL  double_rotation.STL  foot.STL  foot_left.STL  foot_right.STL  forearm.STL  forearm_left.STL  forearm_right.STL  head.STL  hip_left.STL  hip_right.STL  leg.STL  leg_left.STL  leg_right.STL  lower_limb_foot_1.stl  lower_limb_knee_bumper_2.stl  neck.STL  pelvis.STL  shoulder_left.STL  shoulder_right.STL  spine.STL  thigh_right.STL  thight_left.STL  tigh.STL  upper_arm.STL  upper_arm_left.STL  upper_arm_right.STL
poppy_gazebo/meshes/flat_foot/: FR07_left.STL  FR07_right.STL  abdomen.STL  ankle_left.STL  ankle_right.STL  chest.STL  connector_left.STL  connector_right.STL  double_rot.STL  double_rotation.STL  foot_left.STL  foot_right.STL  forearm_left.STL  forearm_right.STL  head.STL  leg_left.STL  leg_right.STL  neck.STL  shoulder_left.STL  shoulder_right.STL  spine.STL  thigh_right.STL  thight_left.STL  upper_arm_left.STL  upper_arm_right.STL
poppy_gazebo/src/: PoppySimpleROSMove.py
poppy_gazebo/urdf/: poppy_flat_feet.sdf  poppy_flat_feet.urdf
poppy_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
poppy_moveit_config/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  poppy.srdf  poppy_controllers.yaml
poppy_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  poppy_controller_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
poppy_moveit_config/scenes/: table.scene
poppy_moveit_config/src/: poppy_trajectory_follower.py
