<?xml version="1.0"?>
<package>
  <name>poppy_gazebo</name>
  <version>0.0.1</version>
  <description>A minimal package to control Poppy in simulation</description>


  <maintainer email="steve.nguyen@inria.fr">Steve Nguyen</maintainer>



  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
