<?xml version="1.0"?>
<package>
  <name>poppy_gazebo</name>
  <version>0.0.1</version>
  <description>A minimal package to control Poppy in simulation</description>


  <maintainer email="steve.nguyen@inria.fr">Steve Nguyen</maintainer>



  <license>LGPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>imu_sensor_controller</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
